// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio getBalanceHistory should return history of 30 items with month range 1`] = `
Array [
  Object {
    "date": 2018-02-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 52 items with all time range 1`] = `
Array [
  Object {
    "date": 2017-03-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-31T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 52 items with year range 1`] = `
Array [
  Object {
    "date": 2017-03-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-04-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-05-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-06-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-07-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-08-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-09-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-10-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-11-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2017-12-31T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-01-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 168 items with day range 1`] = `
Array [
  Object {
    "date": 2018-03-13T18:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T19:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T20:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T21:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T22:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T23:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-14T00:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2018-03-14T01:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2018-03-14T02:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T04:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T05:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T06:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T07:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T08:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T09:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2018-03-14T10:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2018-03-14T11:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T12:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T13:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T14:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T15:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T16:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 168(7 * 24) items with week range 1`] = `
Array [
  Object {
    "date": 2018-03-12T14:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T15:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T16:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T17:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T18:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T19:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T20:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T21:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T22:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2018-03-12T23:59:59.999Z,
    "value": 1224466536917223400,
  },
  Object {
    "date": 2018-03-13T00:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T01:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T02:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T04:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T05:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T06:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T07:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T08:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T09:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T10:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T11:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2018-03-13T12:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2018-03-13T13:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2018-03-13T14:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2018-03-13T15:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2018-03-13T16:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2018-03-13T17:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T18:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T19:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T20:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T21:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T22:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-13T23:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2018-03-14T00:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2018-03-14T01:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2018-03-14T02:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T04:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T05:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T06:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T07:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T08:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2018-03-14T09:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2018-03-14T10:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2018-03-14T11:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T12:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T13:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T14:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T15:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2018-03-14T16:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistoryWithCountervalue should return same value as history 1`] = `
Object {
  "countervalueAvailable": true,
  "countervalueChange": Object {
    "percentage": -0.6474790167773536,
    "value": -29234.115113258835,
  },
  "countervalueReceiveSum": 0,
  "countervalueSendSum": 0,
  "cryptoChange": Object {
    "percentage": null,
    "value": -11160432,
  },
  "history": Array [
    Object {
      "countervalue": 45150.675706470756,
      "date": 2018-03-13T18:59:59.999Z,
      "value": 17236747,
    },
    Object {
      "countervalue": 45150.675706470756,
      "date": 2018-03-13T19:59:59.999Z,
      "value": 17236747,
    },
    Object {
      "countervalue": 45175.05486216644,
      "date": 2018-03-13T20:59:59.999Z,
      "value": 17246054,
    },
    Object {
      "countervalue": 45175.05486216644,
      "date": 2018-03-13T21:59:59.999Z,
      "value": 17246054,
    },
    Object {
      "countervalue": 26312.370091548677,
      "date": 2018-03-13T22:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 26312.370091548677,
      "date": 2018-03-13T23:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 26312.370091548677,
      "date": 2018-03-14T00:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 26312.370091548677,
      "date": 2018-03-14T01:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 26312.370091548677,
      "date": 2018-03-14T02:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 26312.370091548677,
      "date": 2018-03-14T03:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T04:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T05:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T06:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T07:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T08:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T09:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T10:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T11:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T12:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T13:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T14:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T15:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T16:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 15916.560593211923,
      "date": 2018-03-14T17:34:42.000Z,
      "value": 6076315,
    },
  ],
}
`;

exports[`Portfolio getPortfolio should work with one account and is identically to that account history 1`] = `
Array [
  Object {
    "date": 2018-03-07T18:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T19:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T20:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T21:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T22:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-07T23:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T00:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T01:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T02:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T04:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T05:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T06:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T07:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T08:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T09:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T10:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T11:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T12:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T13:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T14:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T15:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T16:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T17:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T18:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T19:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T20:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T21:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T22:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-08T23:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T00:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T01:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T02:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T04:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T05:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T06:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T07:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T08:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T09:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T10:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T11:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T12:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T13:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T14:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T15:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2018-03-09T16:59:59.999Z,
    "value": 6968.184553587052,
  },
  Object {
    "date": 2018-03-09T17:59:59.999Z,
    "value": 6968.184553587052,
  },
  Object {
    "date": 2018-03-09T18:59:59.999Z,
    "value": 6968.184553587052,
  },
  Object {
    "date": 2018-03-09T19:59:59.999Z,
    "value": 6968.184553587052,
  },
  Object {
    "date": 2018-03-09T20:59:59.999Z,
    "value": 6968.184553587052,
  },
  Object {
    "date": 2018-03-09T21:59:59.999Z,
    "value": 13826.2974942496,
  },
  Object {
    "date": 2018-03-09T22:59:59.999Z,
    "value": 13826.2974942496,
  },
  Object {
    "date": 2018-03-09T23:59:59.999Z,
    "value": 14263.713036455569,
  },
  Object {
    "date": 2018-03-10T00:59:59.999Z,
    "value": 14263.713036455569,
  },
  Object {
    "date": 2018-03-10T01:59:59.999Z,
    "value": 14263.713036455569,
  },
  Object {
    "date": 2018-03-10T02:59:59.999Z,
    "value": 14263.713036455569,
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": 14263.713036455569,
  },
  Object {
    "date": 2018-03-10T04:59:59.999Z,
    "value": 14263.713036455569,
  },
  Object {
    "date": 2018-03-10T05:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T06:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T07:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T08:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T09:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T10:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T11:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T12:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T13:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T14:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T15:59:59.999Z,
    "value": 14385.614053819929,
  },
  Object {
    "date": 2018-03-10T16:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-10T17:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-10T18:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-10T19:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-10T20:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-10T21:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-10T22:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-10T23:59:59.999Z,
    "value": 13368.0835748841,
  },
  Object {
    "date": 2018-03-11T00:59:59.999Z,
    "value": 9981.335037637478,
  },
  Object {
    "date": 2018-03-11T01:59:59.999Z,
    "value": 9981.335037637478,
  },
  Object {
    "date": 2018-03-11T02:59:59.999Z,
    "value": 12014.960540763108,
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": 12292.466948150723,
  },
  Object {
    "date": 2018-03-11T04:59:59.999Z,
    "value": 13080.8904674038,
  },
  Object {
    "date": 2018-03-11T05:59:59.999Z,
    "value": 13080.8904674038,
  },
  Object {
    "date": 2018-03-11T06:59:59.999Z,
    "value": 13080.8904674038,
  },
  Object {
    "date": 2018-03-11T07:59:59.999Z,
    "value": 13080.8904674038,
  },
  Object {
    "date": 2018-03-11T08:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T09:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T10:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T11:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T12:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T13:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T14:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T15:59:59.999Z,
    "value": 20306.14715379138,
  },
  Object {
    "date": 2018-03-11T16:59:59.999Z,
    "value": 21470.319288916715,
  },
  Object {
    "date": 2018-03-11T17:59:59.999Z,
    "value": 21470.319288916715,
  },
  Object {
    "date": 2018-03-11T18:59:59.999Z,
    "value": 21470.319288916715,
  },
  Object {
    "date": 2018-03-11T19:59:59.999Z,
    "value": 21470.319288916715,
  },
  Object {
    "date": 2018-03-11T20:59:59.999Z,
    "value": 21470.319288916715,
  },
  Object {
    "date": 2018-03-11T21:59:59.999Z,
    "value": 21470.319288916715,
  },
  Object {
    "date": 2018-03-11T22:59:59.999Z,
    "value": 40674.68943906134,
  },
  Object {
    "date": 2018-03-11T23:59:59.999Z,
    "value": 40674.68943906134,
  },
  Object {
    "date": 2018-03-12T00:59:59.999Z,
    "value": 40674.68943906134,
  },
  Object {
    "date": 2018-03-12T01:59:59.999Z,
    "value": 27166.054412886453,
  },
  Object {
    "date": 2018-03-12T02:59:59.999Z,
    "value": 27166.054412886453,
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": 27166.054412886453,
  },
  Object {
    "date": 2018-03-12T04:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T05:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T06:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T07:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T08:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T09:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T10:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T11:59:59.999Z,
    "value": 27999.296601308237,
  },
  Object {
    "date": 2018-03-12T12:59:59.999Z,
    "value": 29252.74459164152,
  },
  Object {
    "date": 2018-03-12T13:59:59.999Z,
    "value": 29252.74459164152,
  },
  Object {
    "date": 2018-03-12T14:59:59.999Z,
    "value": 29252.74459164152,
  },
  Object {
    "date": 2018-03-12T15:59:59.999Z,
    "value": 31386.404002241365,
  },
  Object {
    "date": 2018-03-12T16:59:59.999Z,
    "value": 31386.404002241365,
  },
  Object {
    "date": 2018-03-12T17:59:59.999Z,
    "value": 31386.404002241365,
  },
  Object {
    "date": 2018-03-12T18:59:59.999Z,
    "value": 31386.404002241365,
  },
  Object {
    "date": 2018-03-12T19:59:59.999Z,
    "value": 31386.404002241365,
  },
  Object {
    "date": 2018-03-12T20:59:59.999Z,
    "value": 27931.17536750336,
  },
  Object {
    "date": 2018-03-12T21:59:59.999Z,
    "value": 27931.17536750336,
  },
  Object {
    "date": 2018-03-12T22:59:59.999Z,
    "value": 27931.17536750336,
  },
  Object {
    "date": 2018-03-12T23:59:59.999Z,
    "value": 27931.17536750336,
  },
  Object {
    "date": 2018-03-13T00:59:59.999Z,
    "value": 29950.81828407011,
  },
  Object {
    "date": 2018-03-13T01:59:59.999Z,
    "value": 29950.81828407011,
  },
  Object {
    "date": 2018-03-13T02:59:59.999Z,
    "value": 29950.81828407011,
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": 29950.81828407011,
  },
  Object {
    "date": 2018-03-13T04:59:59.999Z,
    "value": 29950.81828407011,
  },
  Object {
    "date": 2018-03-13T05:59:59.999Z,
    "value": 29950.81828407011,
  },
  Object {
    "date": 2018-03-13T06:59:59.999Z,
    "value": 42844.56264868265,
  },
  Object {
    "date": 2018-03-13T07:59:59.999Z,
    "value": 42844.56264868265,
  },
  Object {
    "date": 2018-03-13T08:59:59.999Z,
    "value": 42844.56264868265,
  },
  Object {
    "date": 2018-03-13T09:59:59.999Z,
    "value": 42844.56264868265,
  },
  Object {
    "date": 2018-03-13T10:59:59.999Z,
    "value": 42844.56264868265,
  },
  Object {
    "date": 2018-03-13T11:59:59.999Z,
    "value": 42844.56264868265,
  },
  Object {
    "date": 2018-03-13T12:59:59.999Z,
    "value": 42844.56264868265,
  },
  Object {
    "date": 2018-03-13T13:59:59.999Z,
    "value": 44035.62336586625,
  },
  Object {
    "date": 2018-03-13T14:59:59.999Z,
    "value": 44035.62336586625,
  },
  Object {
    "date": 2018-03-13T15:59:59.999Z,
    "value": 45150.675706470756,
  },
  Object {
    "date": 2018-03-13T16:59:59.999Z,
    "value": 45150.675706470756,
  },
  Object {
    "date": 2018-03-13T17:59:59.999Z,
    "value": 45150.675706470756,
  },
  Object {
    "date": 2018-03-13T18:59:59.999Z,
    "value": 45150.675706470756,
  },
  Object {
    "date": 2018-03-13T19:59:59.999Z,
    "value": 45150.675706470756,
  },
  Object {
    "date": 2018-03-13T20:59:59.999Z,
    "value": 45175.05486216644,
  },
  Object {
    "date": 2018-03-13T21:59:59.999Z,
    "value": 45175.05486216644,
  },
  Object {
    "date": 2018-03-13T22:59:59.999Z,
    "value": 26312.370091548677,
  },
  Object {
    "date": 2018-03-13T23:59:59.999Z,
    "value": 26312.370091548677,
  },
  Object {
    "date": 2018-03-14T00:59:59.999Z,
    "value": 26312.370091548677,
  },
  Object {
    "date": 2018-03-14T01:59:59.999Z,
    "value": 26312.370091548677,
  },
  Object {
    "date": 2018-03-14T02:59:59.999Z,
    "value": 26312.370091548677,
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": 26312.370091548677,
  },
  Object {
    "date": 2018-03-14T04:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T05:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T06:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T07:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T08:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T09:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T10:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T11:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T12:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T13:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T14:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T15:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T16:59:59.999Z,
    "value": 15916.560593211923,
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": 15916.560593211923,
  },
]
`;
